--- a/projects-case-2024-7gpus-250kw-ut-heat.html
+++ b/projects-case-2024-7gpus-250kw-ut-heat.html
@@ -47,7 +47,7 @@
           </h1>
 
           <div class="mt-6 flex flex-wrap gap-2">
-            <span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">2024</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Промышленность</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Москва</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Режим: Основной</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">NDA: без заказчика/адреса/стоимости</span>
+            <span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">2024</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Промышленность</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Москва</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Режим: Основной</span>
           </div>
         </div>
       </section>
@@ -59,41 +59,32 @@
           </div>
 
           <div class="lg:col-span-5 flex flex-col gap-8">
-            <div class="glass-card p-10">
+            <div class="lg:pl-2">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
               <div class="mt-4 text-sm text-slate-600 leading-relaxed">
                 Поставка ГПУ на раме с системой утилизации тепла. Настройка автоматики и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.
               </div>
-            </div>
 
-            <div class="glass-card p-10">
-              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
-              <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 1,75 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 7</div><div><span class="text-slate-500">Регион:</span> Москва</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 47 000 000,00 ₽</div>
+              <div class="mt-8 pt-8 border-t border-slate-900/10">
+                <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
+                <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
+                  <div><span class="text-slate-500">Мощность:</span> 1,75 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 7</div><div><span class="text-slate-500">Регион:</span> Москва</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 47 000 000,00 ₽</div>
+                </div>
               </div>
-            </div>
 
-            <div class="glass-card p-10">
-              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Состав работ</div>
-              <ul class="mt-4 space-y-2">
-                <li class="text-sm text-slate-600 leading-relaxed">Поставка</li><li class="text-sm text-slate-600 leading-relaxed">Утилизация тепла</li><li class="text-sm text-slate-600 leading-relaxed">ПНР</li><li class="text-sm text-slate-600 leading-relaxed">Автоматика</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+              <div class="mt-8 pt-8 border-t border-slate-900/10">
+                <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Состав работ</div>
+                <ul class="mt-4 space-y-2">
+                  <li class="text-sm text-slate-600 leading-relaxed">Поставка</li><li class="text-sm text-slate-600 leading-relaxed">Утилизация тепла</li><li class="text-sm text-slate-600 leading-relaxed">ПНР</li><li class="text-sm text-slate-600 leading-relaxed">Автоматика</li>
+                </ul>
+              </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-          <div class="glass-card p-10">
-            <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Результат</div>
-            <div class="mt-4 text-sm text-slate-600 leading-relaxed">
-              Установлено 7 агрегатов, суммарно 1,75 МВт установленной мощности.
-            </div>
-          </div>
-
-          <div class="glass-card p-10">
-            <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Ограничения</div>
-            <div class="mt-4 text-sm text-slate-600 leading-relaxed">
-              NDA: без заказчика/адреса/стоимости
+              <div class="mt-8 pt-8 border-t border-slate-900/10">
+                <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Результат</div>
+                <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                  Установлено 7 агрегатов, суммарно 1,75 МВт установленной мощности.
+                </div>
+              </div>
             </div>
           </div>
         </div>
