--- a/projects-mining-energycenter-1-2mw.html
+++ b/projects-mining-energycenter-1-2mw.html
@@ -47,7 +47,7 @@
           </h1>
 
           <div class="mt-6 flex flex-wrap gap-2">
-            <span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">2014</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Майнинг</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Республика Марий Эл</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Режим: Основной</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Публичная версия: без заказчика/адреса/стоимости</span>
+            <span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">2014</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Майнинг</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Республика Марий Эл</span><span class="px-3 py-1 rounded-full text-[11px] font-black uppercase tracking-[0.18em] bg-white/60 border border-slate-900/10 text-slate-600">Режим: Основной</span>
           </div>
         </div>
       </section>
@@ -65,41 +65,32 @@
           </div>
 
           <div class="lg:col-span-5 flex flex-col gap-8">
-            <div class="glass-card p-10">
+            <div class="lg:pl-2">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
               <div class="mt-4 text-sm text-slate-600 leading-relaxed">
                 Интеграция ГПУ в майнинг-инфраструктуру с настройкой параллельной работы, защит и автоматики. Выполнены пусконаладочные работы и ввод в эксплуатацию.
               </div>
-            </div>
 
-            <div class="glass-card p-10">
-              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
-              <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 1,2 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 400 кВт × 3</div><div><span class="text-slate-500">Регион:</span> Республика Марий Эл</div><div><span class="text-slate-500">Отрасль:</span> Майнинг</div>
+              <div class="mt-8 pt-8 border-t border-slate-900/10">
+                <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
+                <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
+                  <div><span class="text-slate-500">Мощность:</span> 1,2 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 400 кВт × 3</div><div><span class="text-slate-500">Регион:</span> Республика Марий Эл</div><div><span class="text-slate-500">Отрасль:</span> Майнинг</div>
+                </div>
               </div>
-            </div>
 
-            <div class="glass-card p-10">
-              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Состав работ</div>
-              <ul class="mt-4 space-y-2">
-                <li class="text-sm text-slate-600 leading-relaxed">Интеграция</li><li class="text-sm text-slate-600 leading-relaxed">ПНР</li><li class="text-sm text-slate-600 leading-relaxed">Автоматика</li><li class="text-sm text-slate-600 leading-relaxed">Параллельная работа</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+              <div class="mt-8 pt-8 border-t border-slate-900/10">
+                <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Состав работ</div>
+                <ul class="mt-4 space-y-2">
+                  <li class="text-sm text-slate-600 leading-relaxed">Интеграция</li><li class="text-sm text-slate-600 leading-relaxed">ПНР</li><li class="text-sm text-slate-600 leading-relaxed">Автоматика</li><li class="text-sm text-slate-600 leading-relaxed">Параллельная работа</li>
+                </ul>
+              </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-          <div class="glass-card p-10">
-            <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Результат</div>
-            <div class="mt-4 text-sm text-slate-600 leading-relaxed">
-              Параллельная работа ГПУ и подключение к майнинг-инфраструктуре.
-            </div>
-          </div>
-
-          <div class="glass-card p-10">
-            <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Ограничения</div>
-            <div class="mt-4 text-sm text-slate-600 leading-relaxed">
-              Публичная версия: без заказчика/адреса/стоимости
+              <div class="mt-8 pt-8 border-t border-slate-900/10">
+                <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Результат</div>
+                <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                  Параллельная работа ГПУ и подключение к майнинг-инфраструктуре.
+                </div>
+              </div>
             </div>
           </div>
         </div>
