Restore project info and scroll

--- a/projects-mining-site-3mw.html
+++ b/projects-mining-site-3mw.html
@@ -43,6 +43,8 @@
           </a>
 
           <ol class="mt-6 flex flex-wrap items-center gap-2 text-[11px] font-black uppercase tracking-[0.22em] text-slate-500" aria-label="breadcrumbs">
+            <li><a href="index.html" class="hover:text-accent transition">Главная</a></li>
+            <li aria-hidden="true" class="text-slate-400">/</li>
             <li><a href="projects.html" class="hover:text-accent transition">Проекты</a></li>
             <li aria-hidden="true" class="text-slate-400">/</li>
             <li id="projectBreadcrumbTitle">Площадка для майнинга 3 МВт</li>
