--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <div class="bg-blob blob-2"></div>
 
         <!-- HERO (light, full-screen) -->
-        <section class="pt-20 pb-8 min-h-[calc(100vh-88px)] flex items-center">
+        <section class="pt-24 lg:pt-20 pb-8 min-h-[calc(100vh-88px)] flex items-center">
             <div class="max-w-7xl mx-auto px-6 w-full">
                 <div class="grid grid-cols-1 lg:grid-cols-12 gap-10 items-center">
                     <div class="lg:col-span-6">
