--- a/projects-case-2025-10gpus-250kw-ut-heat.html
+++ b/projects-case-2025-10gpus-250kw-ut-heat.html
@@ -35,7 +35,7 @@
       <div class="bg-blob blob-1"></div>
       <div class="bg-blob blob-2"></div>
 
-      <nav class="pt-20 pb-8">
+      <nav class="pt-24 lg:pt-20 pb-8">
         <div class="max-w-7xl mx-auto px-6">
           <a href="projects.html" class="inline-flex items-center gap-2 text-[11px] font-black uppercase tracking-[0.22em] text-slate-500 hover:text-accent transition">
             <i class="fa-solid fa-arrow-left"></i>
